[package]
name = "glitchy"
version = "0.0.1"
authors = ["bcow@iki.fi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = "0.6"
clap = "2.33"
dotenv = "0.14"
log = "0.4"
pretty_env_logger = "0.3"
directories = "2.0"
reqwest = "0.9"
serde = { version = "1.0",  features = ["derive"] }
local_oauth_client = { path = "/home/bcow/git/local-oauth-client" }

# eof